tests/golden/fixtures/syntax-invalid-signed-flag-goto/expected.err
Error: invalid syntax: unsupported flag shorthand 's-?'
   ╭─[ tests/golden/fixtures/syntax-invalid-signed-flag-goto/input.k65:2:5 ]
   │
 2 │   s-? goto .skip
   │     ┬  
   │     ╰── here
   │ 
   │ Help: expected one of c+, c-, d+, d-, i+, i-, or o-
───╯
